update authenticate routine
